--- a/cv_test-main/index.html
+++ b/cv_test-main/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head> 
-	<title>Андрей Синявин</title>
+	<title>Андрей drey Синявин</title>
 	<link rel="stylesheet" href="main.css">
 </head>
 
 <body class="container">
-		<h1>Андрей Синявин</h1>
+		<h1>Андрей  drey Синявин</h1>
 
 		<div class="item">
 			<img class="photo" src="Фото.png" width="170" height="170" alt="фото">
